--- a/biografia.html
+++ b/biografia.html
@@ -46,8 +46,8 @@
 <div class="container">
 
     <div class="contenedor">
-      <article class="tarjeta-central" style="width: 1100px;">
-              <img src="IMG/banda-completa.png" alt="" class="tarjeta-img">
+      <article class="tarjeta-central" style="width: 100%;">
+              <img src="IMG/banda-completa.png" alt="fotografía de la banda completa" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h2>Foo Fighters</h2>
                   <p>Formada en la ciudad de Seattle en 1994 por Dave Grohl, exbaterista de Nirvana y Scream, la banda debe su nombre a los ovnis y los diversos fenómenos aéreos que fueron reportados por los pilotos de los aviones aliados en la Segunda Guerra Mundial, que se conocen colectivamente como foo fighter. Antes del lanzamiento de su álbum debut en 1995, Grohl, como único miembro oficial, reclutó al bajista Nate Mendel y el baterista William Goldsmith, ambos anteriormente miembros de Sunny Day Real Estate, así como su compañero en las giras de Nirvana, Pat Smear como guitarrista para completar la alineación.<br>
@@ -63,7 +63,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/dave-grohl.png" alt="" class="tarjeta-img">
+              <img src="IMG/dave-grohl.png" alt="fotografía de Dave Grohl" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Dave Grohl</h4>
                   <p>David Eric Grohl (14 de enero de 1969) saltó a la fama a comienzos de los años 1990 como baterista de la icónica banda de grunge Nirvana. En 1994, tras la muerte de Cobain y el fin de Nirvana, formó  Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor.<br>
@@ -80,7 +80,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/nate-mendel.png" alt="" class="tarjeta-img">
+              <img src="IMG/nate-mendel.png" alt="fotografía de Nate Mendel" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Nate Mendel</h4>
                   <p>Nathan Gregor Mendel (2 de diciembre de 1968) es un bajista estadounidense de rock alternativo, conocido por ser miembro de las bandas Foo Fighters y Sunny Day Real Estate. <br>
@@ -95,7 +95,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/pat-smear.png" alt="" class="tarjeta-img">
+              <img src="IMG/pat-smear.png" alt="fotografía de Pat Smear" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Pat Smear</h4>
                   <p>George Albert Ruthenberg (5 de agosto de 1959) ex miembro de la banda Germs y actual miembro de Foo Fighters. <br>
@@ -112,7 +112,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/chris-shiflett.png" alt="" class="tarjeta-img">
+              <img src="IMG/chris-shiflett.png" alt="fotografía de Chris Shiflett" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Chris Shiflett</h4>
                   <p>Christopher Aubrey Shiflett, ( 6 de mayo de 1971), más conocido como Chris Shiflett, es un guitarrista estadounidense de punk y rock alternativo, mayormente reconocido por ser miembro de la banda Foo Fighters. <br>
@@ -127,7 +127,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/rami-jaffee.png" alt="" class="tarjeta-img">
+              <img src="IMG/rami-jaffee.png" alt="fotografía de Rami Jaffee" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Rami Jaffee</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet exercitationem quod adipisci a
@@ -140,7 +140,7 @@
 
     <div class="contenedor2">
       <article class="tarjeta">
-              <img src="IMG/taylor-hawkins.png" alt="" class="tarjeta-img">
+              <img src="IMG/taylor-hawkins.png" alt="fotografía de Taylor Hawkins" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Taylor Hawkins</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet exercitationem quod adipisci a
