--- a/discografia.html
+++ b/discografia.html
@@ -48,7 +48,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/foo-fighters1.png">
+          <img src="IMG/foo-fighters1.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Foo Fighters - 1995</h4>
@@ -76,7 +76,7 @@
   <div class="contenedor">
     <div class="col-lg-4">
       <div class="card" style="width: 300px;">
-          <img src="IMG/the-colour-an-the-shape2.png">
+          <img src="IMG/the-colour-an-the-shape2.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>The Colour An The <br>Shape - 1997</h4>
@@ -106,7 +106,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
       <div class="card" style="width: 300px;">
-          <img src="IMG/there is nothing left to lose3.png">
+          <img src="IMG/there is nothing left to lose3.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>There Is Nothing Left <br>To Lose - 1999</h4>
@@ -133,7 +133,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/one-by-one4.png">
+          <img src="IMG/one-by-one4.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>One by One - 2002</h4>
@@ -166,7 +166,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/in-your-honor5.png">
+          <img src="IMG/in-your-honor5.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>In Your Honor - 2005</h4>
@@ -202,7 +202,7 @@
   <div class="contenedor">
     <div class="col-lg-4">
       <div class="card" style="width: 300px;">
-          <img src="IMG/skin-and-bones6.png">
+          <img src="IMG/skin-and-bones6.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Skin And Bones - 2006</h4>
@@ -234,7 +234,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/echoes-silence-patience-y-grace7.png">
+          <img src="IMG/echoes-silence-patience-y-grace7.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Echoes, Silence, Patience<br> & Grace - 2007</h4>
@@ -262,7 +262,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/wasting-light8.png">
+          <img src="IMG/wasting-light8.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Wasting Light - 2011</h4>
@@ -289,7 +289,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/sonic-highways9.png">
+          <img src="IMG/sonic-highways9.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Sonic Highways - 2014</h4>
@@ -313,7 +313,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/concrete-and-gold10.png">
+          <img src="IMG/concrete-and-gold10.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Concrete and Gold - 2017</h4>
@@ -341,7 +341,7 @@
       <div class="contenedor">
         <div class="col-lg-4">
         <div class="card" style="width: 300px;">
-          <img src="IMG/medicine-at-midnight11.png">
+          <img src="IMG/medicine-at-midnight11.png" alt="fotografía del disco">
           <div class="contenido">
             <div class="card-body text-center"></div>
             <h4>Medicine at Midnight - 2021</h4>
@@ -367,7 +367,7 @@
   <div class="contenedor">
     <div class="col-lg-4">
     <div class="card" style="width: 300px;">
-      <img src="IMG/hail-satin12.png">
+      <img src="IMG/hail-satin12.png" alt="fotografía del disco">
       <div class="contenido">
         <div class="card-body text-center"></div>
         <h4>Hail Satin - 2021</h4>
