--- a/galeria.html
+++ b/galeria.html
@@ -45,15 +45,15 @@
     <!-- Galeria -->
       <div class="imagenes"></div>
       <section class="galeria">
-        <a href="#image1"> <img src="IMG/uno.png" alt=""></a>
-        <a href="#image6"> <img src="IMG/seis.png" alt=""></a>
-        <a href="#image5"> <img src="IMG/cinco.png" alt=""></a>
-        <a href="#image8"> <img src="IMG/ocho.png" alt=""></a>
-        <a href="#image3"> <img src="IMG/tres.png" alt=""></a>
-        <a href="#image2"> <img src="IMG/dos.png" alt=""></a>
-        <a href="#image7"> <img src="IMG/siete.png" alt=""></a>
-        <a href="#image4"> <img src="IMG/cuatro.png" alt=""></a>
-        <a href="#image9"> <img src="IMG/nueve.png" alt=""></a>
+        <a href="#image1"> <img src="IMG/uno.png" alt="fotografía de la banda"></a>
+        <a href="#image6"> <img src="IMG/seis.png" alt="fotografía de la banda"></a>
+        <a href="#image5"> <img src="IMG/cinco.png" alt="fotografía de la banda"></a>
+        <a href="#image8"> <img src="IMG/ocho.png" alt="fotografía de la banda"></a>
+        <a href="#image3"> <img src="IMG/tres.png" alt="fotografía de la banda"></a>
+        <a href="#image2"> <img src="IMG/dos.png" alt="fotografía de la banda"></a>
+        <a href="#image7"> <img src="IMG/siete.png" alt="fotografía de la banda"></a>
+        <a href="#image4"> <img src="IMG/cuatro.png" alt="fotografía de la banda"></a>
+        <a href="#image9"> <img src="IMG/nueve.png" alt="fotografía de la banda"></a>
       </section>
 
 
