--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </nav>
-<!--Landing page-->
+
 
     <!-- tarjetas con info -->
 
@@ -49,20 +49,21 @@
 
     <div class="contenedor1">
         <article class="cartas-central" style="width: 250px;">
-                <img src="IMG/carta-uno.png" alt="" class="cartas-img">
+                <img src="IMG/carta-uno.png" alt="Flyer de recital" class="cartas-img">
                 <div class="cartas-body">
-                    <h4>Foo Fighters</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.  </p>
+                    <h5>3 de Septiembre</h5>
+                    <p>London UK<br>WEMBLEY STADIUM </p>
                 </div>
         </article>
       </div>
 
       <div class="contenedor1">
         <article class="cartas-central" style="width: 250px;">
-                <img src="IMG/carta-dos.png" alt="" class="cartas-img">
+                <img src="IMG/carta-tres.png" alt="Flyer de recital" class="cartas-img">
                 <div class="cartas-body">
-                    <h4>Foo Fighters</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.  </p>
+                    <h5>TRIBUTE CONCERT</h5>
+                    <P></P>
+
                     <a href="https://www.foofighters.com/news/taylor-hawkins-tribute-concerts/" target="_blanck" class="btn btn-dark">Más Info</a>
                 </div>
         </article>
@@ -70,10 +71,10 @@
 
       <div class="contenedor1">
         <article class="cartas-central" style="width: 250px;">
-                <img src="IMG/carta-tres.png" alt="" class="cartas-img">
+                <img src="IMG/carta-dos.png" alt="Flyer de recital" class="cartas-img">
                 <div class="cartas-body">
-                    <h4>Foo Fighters</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <h5>27 de Septiembre</h5>
+                    <p>Los Angeles CA. <br> KIA FORUM </p>
                 </div>
         </article>
       </div>
@@ -82,7 +83,7 @@
     <!-- Video -->
 <section class="nosotros">
       <div class="nosotros-body">
-          <h2>Our dear friend, our badass bandmate, <br>our beloved brother</h2>
+          <h2>Our dear friend, our badass bandmate, <br>our beloved brother... </h2>
          <video width="100%" autoplay muted controls>
           <source src="IMG/taylorqepd.mp4" type="video/mp4">
          </video>
