--- a/biografia.html
+++ b/biografia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Biografía</title>
+    <title>Foo Fighters</title>
     <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
     <link rel="stylesheet" media="only screen and (max-width: 1068px)" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="sass/estilos.css">
   </head>
-<meta name="description" content="Esta página contiene una pequeña descripción de la banda">
+<meta name="description" content="Página de Inicio/Home">
   
 <body>
     <body class="bg-dark">   
@@ -130,10 +131,12 @@
               <img src="IMG/rami-jaffee.png" alt="fotografía de Rami Jaffee" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Rami Jaffee</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet exercitationem quod adipisci a
-                      eaque tempore recusandae voluptatibus atque sed ratione dolores, officia deserunt et dolorum
-                      sunt
-                      velit quis excepturi eius.</p>
+                  <p>Rami Jaffee, nacido el 11 de marzo de 1969, en Los Ángeles, es mejor conocido como el tecladista de The Wallflowers y el trabajo de varias bandas y artistas como Foo Fighters, Pete Yorn, Soul Asylum, Pearl Jam, Stone Sour, Arturo José y Coheed and Cambria.<br>
+                    <br>
+                    Jaffee compró su primer teclado a los 13 años. Pronto empezó a tocar con varias bandas locales mientras asistía a Fairfax High School. Durante sus años de escuela secundaria, que solía pasar mucho tiempo en el Deli de Canter, por la calle de su escuela secundaria en la avenida Fairfax. Deli de Canter, o más específicamente, la sala de kibitz (una pequeña barra en la parte trasera de la tienda de comestibles), ha demostrado ser una influencia importante en la carrera musical de Rami.<br>
+                    <br>
+                    Desde 2017, es miembro oficial de Foo Fighters. 
+                    </p>
               </div>
       </article>
     </div>
@@ -143,10 +146,9 @@
               <img src="IMG/taylor-hawkins.png" alt="fotografía de Taylor Hawkins" class="tarjeta-img">
               <div class="tarjeta-body">
                   <h4>Taylor Hawkins</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet exercitationem quod adipisci a
-                      eaque tempore recusandae voluptatibus atque sed ratione dolores, officia deserunt et dolorum
-                      sunt
-                      velit quis excepturi eius.</p>
+                  <p>Oliver Taylor Hawkins (Fort Worth, 17 de febrero de 1972-Bogotá, 25 de marzo de 2022). Antes de unirse a la banda en 1997, fue el baterista de gira de Sass Jordan, Alanis Morissette y de la banda experimental progresiva Sylvia. Fue elegido "Mejor baterista de rock" en 2005 por la revista Rhythm del Reino Unido. <br>
+                    <br>
+                    Además de tocar la batería con Foo Fighters, coescribió y cantó en el álbum doble In Your Honor. Ocasionalmente ayudó con los coros de las canciones en las presentaciones en vivo y de vez en cuando intercambió lugares con Dave para cantar mientras aquel retomaba la batería. Hawkins cantó las canciones "Cold Day in the Sun", "Have a Cigar" y "Life of Illusion". Además, hizo coro en los temas: Erase/Replace, Cheer Up, Boys y But, Honestly. En vivo la cantidad de canciones en las que realizaba coros era mayor. También fue la voz principal en "Sunday Rain" del disco Concrete and Gold, canción cuyo reemplazo en la batería fue Paul McCartney</p>
               </div>
       </article>
     </div>
