--- a/discografia.html
+++ b/discografia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Discografía</title>
+    <title>Foo Fighters</title>
     <link rel="stylesheet" type="text/css" href="CSS/estilos.css">
     <link rel="stylesheet" media="only screen and (max-width: 1068px)" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="sass/estilos.css">
   </head>
-<meta name="description" content="Esta página contiene imágenes de la discografía y lista de tracks">
-
+<meta name="description" content="Página de Inicio/Home">
   <body>
     <body class="bg-dark">
     <!-- Header -->
