--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ms+Madi&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="sass/estilos.css">
   </head>
 <meta name="description" content="Página de Inicio/Home">
 
@@ -62,8 +63,6 @@
                 <img src="IMG/carta-tres.png" alt="Flyer de recital" class="cartas-img">
                 <div class="cartas-body">
                     <h5>TRIBUTE CONCERT</h5>
-                    <P></P>
-
                     <a href="https://www.foofighters.com/news/taylor-hawkins-tribute-concerts/" target="_blanck" class="btn btn-dark">Más Info</a>
                 </div>
         </article>
